# claude-powered-clipper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.codegraph/: daemon.pid
_docs/: idea.md
scripts/: correct.py  doctor.py  download.py  render.py  transcribe.py
scripts/lib/: captions.py  correct.py  facetrack.py  ffmpeg.py  io.py  markup.py  timeline.py
tests/: test_captions.py  test_correct.py  test_facetrack.py  test_integration.py  test_render.py  test_timeline.py
