[project]
name = "aiclipper"
version = "0.1.0"
description = "YouTube AI Clipper - Claude Code orchestrated clip pipeline"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2025.1.0",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "faster-whisper>=1.1; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "static-ffmpeg>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
